--- a/views/index.jade
+++ b/views/index.jade
@@ -1,21 +1,7 @@
-B
-B
-B
-A
-A
-A
-A
-B
-
-
-
-
-
-
 extends layout
 
 block content
-  h1  
+  h1  Where is my train!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
